# hatui

./: .gitignore  README.md  pyproject.toml
hatui/: dashboard.py  entities.py  entity_widget.py  hatui_types.py  helpers.py  main.py  tcss.tcss
src/hatui/: __init__.py  dashboard.py  entity_widget.py  hatui_types.py  helpers.py  main.py  tcss.tcss
