[project]
name = "hatui"
version = "0.1.0"
description = "A Terminal User Interface (TUI) Home Assistant dashboard using the Textual library."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "backoff>=2.2.1",
    "homeassistant>=2025.12.0",
    "humanize>=4.14.0",
    "nerdfont>=3.4.0.post1",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "textual>=6.7.1",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "basedpyright>=1.35.0",
    "ruff>=0.14.8",
    "textual-dev>=1.8.0",
]

[project.scripts]
hatui = "hatui:run"
